--- a/registro.css
+++ b/registro.css
@@ -1,4 +1,8 @@
 
+.titulo {
+    color: #2c9bc7;
+}
+
 
   .benefits {
     margin-top: 80px;
@@ -8,9 +12,15 @@
   .benefits h2 {
     text-align: center;
     margin-bottom: 30px;
+    color: #222d56;
+  }
+
+  .benefits h3 {
+    color: #2c9bc7;
   }
 
   .benefits .col-md-6 {
     margin-bottom: 20px;
+    
   }
   
